[package]
name = "mqtt_pid"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
csv = "1.3.1"
jiff = "0.1.14"
num-traits = "0.2.19"
pid = "4.0.0"
rand = "0.8.5"
rumqttc = "0.24.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync"] }
