[package]
name = "mqtt_pid"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.5"
jiff = "0.1.14"
log = "0.4.22"
pid = "4.0.0"
rand = "0.8.5"
rumqttc = "0.24.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "sync"] }
